# ProteinGNN

./: .gitignore  LICENSE  README.md  example.py  setup.cfg  setup.py
imgs/: graph_vis.py
src/proteingnn/: data.py  model.py  util.py
src/proteingnn/example/: data.py  model.py  util.py
test/: test_data.py
