[metadata]
name = ProteinGNN
version = 0.0.1

[options]
packages = 
    proteingnn
    proteingnn.example
package_dir =
    =src
install_requires =
    python_version >= '3.7'
    absl-py
    biopython
    fair-esm
    pandas
    pyrosetta
    pytorch_lightning<1.4
    seaborn
    torch
    torchmetrics
    torch_geometric
    torch_scatter
    torch_sparse
    tqdm

; pyrosetta and torch-related have to be independently installed in anaconda
; pytorch_lightning = '1.4' fails because training_epoch_end comes later than validate_epoch_end

